src/App.css
:root {
    --background-colour: #f8f8f8;
    --btn-colour: #feeff2;
    --project-card-background: #fffffff00;
    --text-colour: #141414;
    --theme-text-colour: #f999b1;
    --grey-text-colour: #767676;
    --navbar-background: rgba(255, 255, 255, 0.889);
}

[data-theme='dark'] {
    --background-colour: #141414;
    --btn-colour: #feeff2;
    --project-card-background: #fffffff00;
    --text-colour: #f8f8f8;
    --theme-text-colour: #f9c6d3;
    --grey-text-colour: #767676;
    --navbar-background: rgba(0, 0, 0, 0.889);
}

body {
    background-color: var(--background-colour);
    display: flex;
    justify-content: center;
    margin: 0 auto 60px;
    overflow-x: hidden !important;
}

#root {
    display: flex;
    flex-direction: column;
    gap: 60px;
    padding: 0 40px;
    box-sizing: border-box;
    max-width: 100%;
    width: 100%;
}

h1,
h2,
h3,
p {
    color: var(--text-colour);
    margin: 0;
    padding: 0;
}

h2,
h3 {
    font-family: 'Montserrat';
    font-size: 20px;
}

h1 {
    font-family: 'Montserrat';
    font-weight: 800;
    font-size: 32px;
}

p {
    font-family: 'Mulish';
    font-size: 16px;
    font-weight: 300;
}

.sectionTitle {
    margin-bottom: 30px;
}

.hover {
    cursor: pointer;
}

@media (width >= 800px) {
    #root {
        gap: 100px;
    }

    h1 {
        font-size: 40px;
    }

    h2,
    h3 {
        font-size: 24px;
    }

    p {
        font-size: 20px;
    }

    .sectionTitle {
        margin-bottom: 60px;
    }
}

@media (width >= 1400px) {
    #root {
      gap: 200px;
    }

    h1 {
      font-size: 48px;
    }

    .sectionTitle {
      margin-bottom: 75px;
    }
}

